src/Common Files/frames.h

//Sum3.cpp
     int FRAMES_API Initialize(char *argv0, char *argv1, char *argv2, char *argv3, char *argv4, char *argv5);
     int FRAMES_API Iterate(int iteration);
     int FRAMES_API Finalize();
     int FRAMES_API affGetFluxType(int dsIdx, int fluxIdx, char *type, double *size, char *sunt, double *density, char *dunt);
     int FRAMES_API affGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API affGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
     int FRAMES_API wffGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
    void FRAMES_API atoGetGridMoist(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);
    void FRAMES_API atoGetGridOutputType(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, char *name);
  double FRAMES_API atoGetGridMax(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, double& xCoord, double& yCoord);
  double FRAMES_API atoGetGridMin(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, double& xCoord, double& yCoord);
  double FRAMES_API atoGetGridValue(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, int axis1, int axis2);
     int FRAMES_API atoGetGridAxis1Count(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID);
     int FRAMES_API atoGetGridAxis2Count(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID);
  double FRAMES_API atoGetGridAxis1Value(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, int Idx);
  double FRAMES_API atoGetGridAxis2Value(int dsIdx, int conIdx, int progIdx, int timeIdx, int gridID, int Idx);
         //---------- ATO timeseries calls-------------------------
     int FRAMES_API atoGetTimeSeries(int dsIdx, int conIdx, int progIdx, char *product, char *flux, char *moist, double x, double y);
  double FRAMES_API atoGetTimeSeriesTime(int dsIdx, int conIdx, int progIdx, int timeIdx);
  double FRAMES_API atoGetTimeSeriesValue(int dsIdx, int conIdx, int progIdx, int timeIdx);
    void FRAMES_API atoGetTimeSeriesXAxisUnit(int dsIdx, int conIdx, int progIdx, char *unit);
    void FRAMES_API atoGetTimeSeriesYAxisUnit(int dsIdx, int conIdx, int progIdx, char *unit);
     int FRAMES_API epfGetExposurePoint(int dsIdx, int locIdx, double *xp, double *yp);
     int FRAMES_API epfGetTimeCount(int dsIdx, char *parentCAS);
    void FRAMES_API epfGetTimeSeries(int dsIdx, double *stime, double *svalue);
     int FRAMES_API rifGetExposurePoint(int dsIdx, int locIdx, double *xp, double *yp);
     int FRAMES_API rifGetTimeCount(int dsIdx, int ageIdx, char *parentCAS);
     int FRAMES_API rifGetAgeGroup(int dsIdx, int ageIdx, double *min, double *max);
    void FRAMES_API rifGetTimeSeries(int dsIdx, double *stime, double *svalue);
//HIFClass.cpp
    bool FRAMES_API hifChecksum();
     int FRAMES_API hifGetExposurePoint(int dsIdx, int locIdx, double *xp, double *yp);
     int FRAMES_API hifGetAgeGroup(int dsIdx, int ageIdx, double *min, double *max);
    void FRAMES_API hifGetTimeSeries(int dsIdx, double *stime, double *svalue);