Common Files/oldFrames.bas

Public Declare Sub DLLatoGetGridMoist Lib "Frames" Alias "atoGetGridMoist" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Sub DLLatoGetGridFluxType Lib "Frames" Alias "atoGetGridFluxType" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Sub DLLatoGetGridOutputType Lib "Frames" Alias "atoGetGridOutputType" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal name As String)
Public Declare Function atoGetGridMax Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByRef xCoord As Double, ByRef yCoord As Double) As Double
Public Declare Function atoGetGridMin Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByRef xCoord As Double, ByRef yCoord As Double) As Double
Public Declare Function atoGetGridValue Lib "Frames" (ByVal dsID As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal axis1 As Long, ByVal axis2 As Long) As Single
Public Declare Function atoGetGridAxis1Count Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long) As Long
Public Declare Function atoGetGridAxis2Count Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long) As Long
Public Declare Function atoGetGridAxis1Value Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal Index As Long) As Double
Public Declare Function atoGetGridAxis2Value Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal timeID As Long, ByVal gridID As Long, ByVal Index As Long) As Double
'//----------- ATO timeseries calls---------------
Public Declare Function atoGetTimeSeries Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal output As String, ByVal flux As String, ByVal moist As String, ByVal xCoord As Double, ByVal yCoord As Double) As Long
Public Declare Function atoGetTimeSeriesTime Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal n As Long) As Double
Public Declare Function atoGetTimeSeriesValue Lib "Frames" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal n As Long) As Double
Public Declare Sub DLLatoGetTimeSeriesXAxisUnit Lib "Frames" Alias "atoGetTimeSeriesXAxisUnit" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal unit As String)
Public Declare Sub DLLatoGetTimeSeriesYAxisUnit Lib "Frames" Alias "atoGetTimeSeriesYAxisUnit" (ByVal dsIndex As Long, ByVal constID As Long, ByVal progID As Long, ByVal unit As String)
'//-------------------------------------------
'//----------- EPF calls ---------------------
'//-------------------------------------------
Public Declare Sub epfCloseDataset Lib "Frames" ()
Public Declare Sub epfGetRoutesAndPathways Lib "Frames" (ByVal nd As Long, ByVal nrt As Long, ByVal Route As String, ByVal Path As String, ByVal unit As String)
Public Declare Sub epfGetTimeSeries Lib "Frames" (ByVal nd As Long, ByVal n As Long, ByRef times As Single, ByRef values As Single)
Public Declare Function epfReadRoutesAndPathwaysByTime Lib "Frames" (ByVal nd As Long, ByVal casid As String, ByVal parentcas As String, ByVal timeindex As Long) As Long
Public Declare Function epfGetTimeCount Lib "Frames" (ByVal nd As Long, ByVal parent As String) As Long
Public Declare Function readEPFDatasets Lib "Frames" (ByVal FUIName As String, ByVal Source As String) As Long
Public Declare Function epfGetExposurePoint Lib "Frames" (ByVal nd As Long, ByVal ep As Long, ByRef xp As Long, ByRef yp As Long) As Long
Public Declare Function epfGetDatasetCounts Lib "Frames" (ByVal nd As Long, ByRef np As Long, ByVal loc As String, ByVal med As String) As Long
Public Declare Function epfReadRoutesAndPathways Lib "Frames" (ByVal nd As Long, ByVal casid As String, ByVal pcasid As String) As Long
Public Declare Function epfReadTimeSeries Lib "Frames" (ByVal nd As Long, ByVal cas As String, ByVal npt As Long, ByVal rte As String, ByVal Path As String, ByVal prog As String) As Long
'//-------------------------------------------
'//----------- RIF calls ---------------------
'//-------------------------------------------
Public Declare Sub rifCloseDataset Lib "Frames" ()
Public Declare Sub rifGetRoutesAndPathways Lib "Frames" (ByVal nd As Long, ByVal nrt As Long, ByVal Route As String, ByVal Path As String, ByVal unit As String, ByVal name As String)
Public Declare Sub rifGetTimeSeries Lib "Frames" (ByVal nd As Long, ByVal n As Long, ByRef times As Single, ByRef values As Single)
Public Declare Function rifGetTimeCount Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByVal parent As String) As Long
Public Declare Function rifReadRoutesAndPathwaysByTime Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByVal casid As String, ByVal parentcas As String, ByVal timeindex As Long) As Long
Public Declare Function readRIFDatasets Lib "Frames" (ByVal FUIName As String, ByVal Source As String) As Long
Public Declare Function rifGetExposurePoint Lib "Frames" (ByVal nd As Long, ByVal ep As Long, ByRef xp As Long, ByRef yp As Long) As Long
Public Declare Function rifGetDatasetCounts Lib "Frames" (ByVal nd As Long, ByRef np As Long, ByRef NA As Long, ByVal loc As String, ByVal med As String, ByVal dstype As String) As Long
Public Declare Function rifReadRoutesAndPathways Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByVal casid As String, ByVal pcasid As String) As Long
Public Declare Function rifGetAgeGroup Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByRef mina As Single, ByRef maxa As Single) As Long
Public Declare Function rifReadTimeSeries Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByVal cas As String, ByVal npt As Long, ByVal endpt As String, ByVal uom As String, ByVal rte As String, ByVal Path As String, ByVal prog As String) As Long
'//-------------------------------------------
'//----------- HIF calls ---------------------
'//-------------------------------------------
Public Declare Sub hifCloseDataset Lib "Frames" ()
Public Declare Sub hifGetCancerSites Lib "Frames" (ByVal nd As Long, ByVal ns As Long, ByVal lpStrings As String)
Public Declare Sub hifGetOrganSites Lib "Frames" (ByVal nd As Long, ByVal ns As Long, ByVal lpStrings As String)
Public Declare Sub hifGetTimeSeries Lib "Frames" (ByVal nd As Long, ByVal n As Long, ByRef times As Single, ByRef values As Single)
Public Declare Sub hifGetRoutesAndPathways Lib "Frames" (ByVal nd As Long, ByVal nrt As Long, ByVal Route As String, ByVal Path As String, ByVal unit As String, ByVal name As String)
Public Declare Sub hifGetTimeSeriesArray Lib "Frames" (ByVal nd As Long, ByRef times As Single, ByRef values As Single)
Public Declare Function hifChecksum Lib "Frames" () As Boolean
Public Declare Function readHIFDatasets Lib "Frames" (ByVal FUIName As String, ByVal Source As String) As Long
Public Declare Function hifGetExposurePoint Lib "Frames" (ByVal nd As Long, ByVal ep As Long, ByRef xp As Long, ByRef yp As Long) As Long
Public Declare Function hifGetAgeGroup Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByRef mina As Single, ByRef maxa As Single) As Long
Public Declare Function hifGetDatasetCounts Lib "Frames" (ByVal nd As Long, ByRef np As Long, ByRef NA As Long, ByRef nc As Long, ByRef no As Long, ByVal loc As String, ByVal med As String, ByVal dstype As String) As Long
Public Declare Function hifReadTimeSeries Lib "Frames" (ByVal nd As Long, ByVal age As Long, ByVal lpcas As String, ByVal npt As Long, ByVal organ As Long, ByVal endpt As String, ByVal epunit As String, ByVal rte As String, ByVal Path As String, ByVal prog As String) As Long
Public Declare Function hifReadRoutesAndPathways Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByVal casid As String, ByVal timeindex As Long, ByVal pcas As String) As Long
Public Declare Function hifGetOption1Data Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByVal start As Single, ByVal casid As String, ByVal pcasid As String, ByVal pathname As String, ByVal exprte As String, ByVal pointnum As Long, ByVal endpt As String, ByVal organ As Long) As Double
Public Declare Function LoadStartTimes Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByVal casid As String, ByVal tslen As Long, ByVal timestring As String) As Long
Public Declare Function hifGetHealthImpactsByTime Lib "Frames" (ByVal nd As Long, ByVal NA As Long, ByVal np As Long, ByVal organ As Long, ByVal timeidx As Long, ByVal cas As String, ByVal pcas As String, ByVal rte As String, ByVal pw As String, ByVal metric As String, ByVal ep As String, ByVal expdur As String) As Double
'//-------------------------------------------
'//----------- SUMMMM calls ---------------------
'//-------------------------------------------
Public Declare Function Initialize Lib "Frames" (ByVal lp1 As String, ByVal lp2 As String, ByVal lp3 As String, ByVal lp4 As String, ByVal lp5 As String) As Long
Public Declare Function Iterate Lib "Frames" (ByVal Iteration As Integer) As Long
Public Declare Function Finalize Lib "Frames" () As Long

Public cont() As ContamList
Public allCont() As ContamList

Dim retString As String * MAXFIELD
Dim retString1 As String * MAXFIELD

'//-------------------------------------------
'//----------- AFF calls ---------------------
'//-------------------------------------------
Public Function affGetSetName(ByVal nset As Long, ByRef name As String) As Long
  retString = Space(MAXFIELD)
  affGetSetName = DLLaffGetSetName(nset, retString)
  name = StripTerminator(retString)
End Function

Public Function affGetFluxType(ByVal nset As Long, ByVal nFlux As Long, ByRef name As String, ByRef size As Single, ByRef uom As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  affGetFluxType = DLLaffGetFluxType(nset, nFlux, retString, size, retString1)
  name = StripTerminator(retString)
  uom = StripTerminator(retString1)
End Function

Public Function affGetContamName(ByVal nset As Long, ByVal ncon As Long, ByVal nprog As Long, ByRef name As String, ByRef cas As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  affGetContamName = DLLaffGetContamName(nset, ncon, nprog, retString, retString1)
  name = StripTerminator(retString)
  cas = StripTerminator(retString1)
End Function

Public Function affGetSeriesProperties(ByVal nset As Long, ByVal ncon As Long, ByVal nprog As Long, ByVal nFlux As Long, ByRef units As String, ByRef timeunits As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  affGetSeriesProperties = DLLaffGetSeriesProperties(nset, ncon, nprog, nFlux, retString, retString1)
  units = StripTerminator(retString)
  timeunits = StripTerminator(retString1)
End Function
'//-------------------------------------------
'//----------- WFF calls ---------------------
'//-------------------------------------------
Public Function wffGetMediaName(ByVal nMed As Long, ByRef name As String) As Long
  name = Space(MAXFIELD)
  wffGetMediaName = DLLwffGetMedia(nMed, name)
  name = StripTerminator(name)
End Function

Public Function wffGetContamName(ByVal nMed As Long, ByVal ncon As Long, ByVal nprog As Long, ByRef name As String, ByRef cas As String) As Long
  name = Space(MAXFIELD)
  cas = Space(MAXFIELD)
  wffGetContamName = DLLwffGetContamName(nMed, ncon, nprog, name, cas)
  name = StripTerminator(name)
  cas = StripTerminator(cas)
End Function
